@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 <?xml-stylesheet href="chrome://gamefox/skin/sidebar.css" type="text/css"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
 <!-- vim: set et sw=2 ts=2 sts=2 tw=79:
 
-     Copyright 2005, 2006, 2007, 2008, 2009, 2010
+     Copyright 2005, 2006, 2007, 2008, 2009, 2010, 2011
      Abdullah A, Toad King, Brian Marshall, Michael Ryan
 
      This file is part of GameFOX.
@@ -22,130 +19,143 @@
      You should have received a copy of the GNU General Public License
      along with GameFOX.  If not, see <http://www.gnu.org/licenses/>.
 -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>GameFOX Sidebar</title>
-  <base href="about:blank" target="_main"/>
-  <script type="application/x-javascript" src="chrome://gamefox/content/defs.js"></script>
-  <script type="application/x-javascript" src="chrome://gamefox/content/lib.js"></script>
-  <script type="application/x-javascript" src="chrome://gamefox/content/sidebar.js"></script>
-  <script type="application/x-javascript" src="chrome://gamefox/content/utils.js"></script>
-  <script type="application/x-javascript" src="chrome://gamefox/content/accounts.js"></script>
-  <script type="application/x-javascript" src="chrome://gamefox/content/observers.js"></script>
+  <base href="http://www.gamefaqs.com/" target="_main"/>
+  <script type="application/x-javascript"
+    src="chrome://gamefox/content/defs.js"></script>
+  <script type="application/x-javascript"
+    src="chrome://gamefox/content/lib.js"></script>
+  <script type="application/x-javascript"
+    src="chrome://gamefox/content/sidebar.js"></script>
+  <script type="application/x-javascript"
+    src="chrome://gamefox/content/utils.js"></script>
+  <script type="application/x-javascript"
+    src="chrome://gamefox/content/accounts.js"></script>
+  <script type="application/x-javascript"
+    src="chrome://gamefox/content/observers.js"></script>
 </head>
 <body>
-    <h1><a href="http://beyondboredom.net/gamefox/">GameFOX</a></h1>
+  <h1><a href="http://beyondboredom.net/gamefox/">GameFOX</a></h1>
 
-    <div id="links">
-      <div id="quicknav">
-          <a href="http://www.gamefaqs.com/">Home</a><br/>
-          <a href="http://www.gamefaqs.com/new/">What's New</a><br/>
-          <a href="http://www.gamefaqs.com/contribute/">Contribute</a><br/>
-          <a href="http://www.gamefaqs.com/features/">Features</a><br/>
-          <a href="http://www.gamefaqs.com/boards">Boards</a><br/>
-          <a href="http://www.gamefaqs.com/features/mygames/index.html"
-              >My Games</a><br/>
-          <a href="http://www.gamefaqs.com/features/qna/index.php"
-              >Answers</a><br/>
-          <a href="http://www.gamefaqs.com/features/help/">Help</a><br/>
-      </div>
-      <div id="platformlist">
-          <a href="http://www.gamefaqs.com/3ds">3DS</a><br/>
-          <a href="http://www.gamefaqs.com/ds">DS</a><br/>
-          <a href="http://www.gamefaqs.com/iphone">iPhone</a><br/>
-          <a href="http://www.gamefaqs.com/pc">PC</a><br/>
-          <a href="http://www.gamefaqs.com/ps2">PS2</a><br/>
-          <a href="http://www.gamefaqs.com/ps3">PS3</a><br/>
-          <a href="http://www.gamefaqs.com/psp">PSP</a><br/>
-          <a href="http://www.gamefaqs.com/wii">Wii</a><br/>
-          <a href="http://www.gamefaqs.com/xbox360">Xbox 360</a><br/>
-          <a href="http://www.gamefaqs.com/systems.html">All Systems</a>
-      </div>
-    </div>
+  <div id="links">
+    <ul id="quicknav">
+      <li><a href="/">Home</a></li>
+      <li><a href="/new/">What's New</a></li>
+      <li><a href="/contribute/">Contribute</a></li>
+      <li><a href="/features/">Features</a></li>
+      <li><a href="/boards">Boards</a></li>
+      <li><a href="/features/mygames/index.html">My Games</a></li>
+      <li><a href="/features/qna/index.php">Answers</a></li>
+      <li><a href="/features/help/">Help</a></li>
+    </ul>
+    <ul id="platformlist">
+      <li><a href="/3ds">3DS</a></li>
+      <li><a href="/ds">DS</a></li>
+      <li><a href="/iphone">iPhone</a></li>
+      <li><a href="/pc">PC</a></li>
+      <li><a href="/ps2">PS2</a></li>
+      <li><a href="/ps3">PS3</a></li>
+      <li><a href="/psp">PSP</a></li>
+      <li><a href="/vita">Vita</a></li>
+      <li><a href="/wii">Wii</a></li>
+      <li><a href="/wii-u">Wii U</a></li>
+      <li><a href="/xbox360">Xbox 360</a></li>
+      <li><a href="/systems.html">All Systems</a></li>
+    </ul>
+  </div>
 
-    <div id="userlinks">
-      <div class="strip">
-        <a href="http://www.gamefaqs.com/boards/user.php">Profile</a> /
-        <a href="http://www.gamefaqs.com/user/manage.html">Manage</a>
-      </div>
+  <div id="userlinks">
+    <h2>
+      <a href="/boards/user.php">Profile</a> /
+      <a href="/user/manage.html">Manage</a>
+    </h2>
 
-      <div class="strip">
-        <a href="http://www.gamefaqs.com/boards/myposts.php">Posts</a> /
-        <a href="http://www.gamefaqs.com/boards/tracked.php">Tracked</a> /
-        <a href="http://www.gamefaqs.com/boards/modhist.php">Mods</a>
-      </div>
-    </div>
+    <h2>
+      <a href="/boards/myposts.php">Posts</a> /
+      <a href="/boards/tracked.php">Tracked</a> /
+      <a href="/boards/modhist.php">Mods</a>
+    </h2>
+  </div>
 
-    <div id="search">
-      <div class="strip">
-        <a href="http://www.gamefaqs.com/search/">Search GameFAQs</a>
-      </div>
-      <form method="get" action="http://www.gamefaqs.com/search/index.html">
-        <input type="hidden" name="platform" value="0"/>
-        <input type="text" name="game" size="12"/>
-        <input type="submit" value="Go"/>
-      </form>
-    </div>
+  <div id="search">
+    <h2><a href="/search/">Search GameFAQs</a></h2>
 
-    <div id="gotoboard">
-      <div class="strip">Go to board ID</div>
-      <form method="get" action="http://www.gamefaqs.com/boards/gentopic.php">
-        <input type="text" name="board" size="10"/>
-        <input type="submit" value="Go"/>
-      </form>
-    </div>
+    <form method="get" action="/search/index.html">
+      <input type="hidden" name="platform" value="0"/>
+      <input type="text" name="game" size="12"/>
+      <input type="submit" value="Go"/>
+    </form>
+  </div>
 
-    <div id="login">
-      <div class="strip">Login (Email/Pass)</div>
-      <form method="post" action="http://www.gamefaqs.com/user/login.html"
-          id="gamefaqs-login-form">
-        <input type="hidden" name="path" id="gamefaqs-login-path"
-          value="http://www.gamefaqs.com/boards/index.php"/>
-        <input type="text" name="EMAILADDR" maxlength="90"/>
-        <input type="password" name="PASSWORD" maxlength="20"/>
-        <input type="submit" value="Login" id="gamefaqs-login-submit"/>
-      </form>
+  <div id="gotoboard">
+    <h2>Go to board ID</h2>
 
-      <div class="strip">
-        <a href="http://www.gamefaqs.com/user/logout.html?r=www.gamefaqs.com%2Fboards%2Findex.php"
-            >Logout</a> /
-        <a href="http://membership.gamefaqs.com/1328-4-46.html">Password</a>
-      </div>
-    </div>
+    <form method="get" action="/boards/gentopic.php">
+      <input type="text" name="board" size="10"/>
+      <input type="submit" value="Go"/>
+    </form>
+  </div>
 
-    <div id="accounts">
-      <div class="strip">
-        Accounts (<a id="accounts-add-link">Add</a><span
-          id="accounts-remove"> / <a id="accounts-rm-link">Remove</a></span>)
-      </div>
+  <div id="login">
+    <h2>Login (Email/Pass)</h2>
 
-      <div id="accounts-menu"></div>
-    </div>
+    <form method="post" action="/user/login.html" id="gamefaqs-login-form">
+      <input type="hidden" name="path" id="gamefaqs-login-path"
+        value="/boards/index.php"/>
+      <input type="text" name="EMAILADDR" maxlength="90"/>
+      <input type="password" name="PASSWORD" maxlength="20"/>
+      <input type="submit" value="Login" id="gamefaqs-login-submit"/>
+    </form>
 
-    <div id="favorites">
-      <div class="strip">
-        <a href="chrome://gamefox/content/favorites.xul" target="_self">Favorites</a>
-      </div>
-      <iframe src="chrome://gamefox/content/favorites.xul" style="width: 100%; height: 300px;"
-          type="content"/>
-    </div>
+    <h2>
+      <a href="/user/logout.html?r=www.gamefaqs.com%2Fboards%2Findex.php"
+        >Logout</a> /
+      <a href="http://membership.gamefaqs.com/1328-4-46.html">Password</a>
+    </h2>
+  </div>
 
-    <div id="tags">
-      <div class="strip">
-        <a href="chrome://gamefox/content/tags.xul" target="_self">Tags</a>
-      </div>
-      <iframe src="chrome://gamefox/content/tags.xul" style="width: 100%; height: 300px;"
-          type="content"/>
-    </div>
+  <div id="accounts">
+    <h2>
+      Accounts (<a id="accounts-add-link">Add</a> /
+      <a id="accounts-rm-link">Remove</a>)
+    </h2>
 
-    <div id="tracked">
-      <div class="strip">
-        <a href="chrome://gamefox/content/tracked.xul" target="_self">Tracked Topics</a>
-      </div>
-      <iframe src="chrome://gamefox/content/tracked.xul" style="width: 100%; height: 300px;"
-          type="content"/>
-    </div>
+    <div id="accounts-menu"></div>
+  </div>
 
-    <div class="strip"><a href="chrome://gamefox/content/options/sidebar.xul"
-            id="configure-link">Configure Sidebar</a></div>
+  <div id="favorites">
+    <h2>
+      <a href="chrome://gamefox/content/favorites.xul" target="_self"
+        >Favorites</a>
+    </h2>
+
+    <iframe src="chrome://gamefox/content/favorites.xul" type="content"/>
+  </div>
+
+  <div id="tags">
+    <h2>
+      <a href="chrome://gamefox/content/tags.xul" target="_self">Tags</a>
+    </h2>
+
+    <iframe src="chrome://gamefox/content/tags.xul" type="content"/>
+  </div>
+
+  <div id="tracked">
+    <h2>
+      <a href="chrome://gamefox/content/tracked.xul" target="_self">Tracked
+        Topics</a>
+    </h2>
+
+    <iframe src="chrome://gamefox/content/tracked.xul" type="content"/>
+  </div>
+
+  <h2>
+    <a href="chrome://gamefox/content/options/sidebar.xul" id="configure-link"
+      >Configure Sidebar</a>
+  </h2>
 </body>
 </html>
