@@ -20,6 +20,8 @@ a:hover
 iframe
 {
   border: 0;
+  width: 100%;
+  height: 300px;
 }
 
 h1
@@ -34,7 +36,7 @@ h1 a
   color: #fff;
 }
 
-.strip
+h2
 {
   clear: both;
   font-weight: bold;
@@ -44,8 +46,9 @@ h1 a
   padding: 2px;
   border: 1px solid #4140db;
   border-width: 1px 0;
+  font-size: 1em;
 }
-.strip a
+h2 a
 {
   color: #fff;
 }
@@ -59,6 +62,9 @@ h1 a
 #quicknav, #platformlist
 {
   text-align: left;
+  list-style-type: none;
+  padding: 0;
+  margin-top: 0;
 }
 
 #quicknav
