@@ -1,5 +1,6 @@
 0000-00-00:
     * version 0.8.4
+    * Add Vita and Wii U to the GameFOX sidebar links
 
 2011-10-31:
     * version 0.8.3
